# shopofy

./: README.md  setup.cfg  setup.py
examples/: test.ipynb
shopofy/: __main__.py  controller.py  rqmap.py  view.py
