[metadata]
name = shopofy
version = attr: shopofy.version.__version__
description = A tool to find position for a given Schottky power.
author = gwgwhc
license = GPLv3
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    shopofy = shopofy.__main__:main
